balehu.topmonks.com/src/stylesheets/main.scss
@import "@material/layout-grid/mdc-layout-grid";

:root {
  --mdc-layout-grid-margin-desktop: 24px;
  --mdc-layout-grid-gutter-desktop: 20px;
  --mdc-layout-grid-column-width-desktop: 60px;
}

body {
  padding: 0;
  margin: 0;
  font-family: proxima-nova, sans-serif;
  font-weight: 400;
  font-style: normal;
  line-height: 1.4;
}

section {
  margin: 24px 0;
}

.bl-layout-wrapper {
  max-width: 1030px;
  margin: 0 auto;
}

.bl-bgnd-wrapper {
  background-color: #F8F8F8;
  background-image: url("../images/bgnd_section_white.png");
  background-position: bottom -150px center;
  background-repeat: repeat-x;
  .wallet & {
    background-position: bottom 0 center;
  }
}

.tns {
  &-nav {
    text-align: center;

    > [aria-controls] {
      width: 9px;
      height: 9px;
      padding: 0;
      margin: 0 5px;
      border-radius: 50%;
      background: #C4C4C4;
      border: 0;
    }

    > .tns-nav-active {
      background: #6C6AB9;
    }
  }

  &-item {
    img {
      width: 100%;
      max-width: 305px;
    }
  }

  &-slider {
    padding-left: 0;
    z-index: -1;
  }

  &-outer [data-action] {
    display: block;
    margin: 10px auto;
    font-size: 17px;
    min-width: 3em;
    text-align: center;
    background: transparent;
    border: 0;
  }
}

@media screen and (max-width: 839px) {
  .bl-layout--order-1-mobile {
    order: 1;
  }
}

.bh-revenue {
  color: #B1AEF8;
  white-space: nowrap;
  &__input {
    display: inline-block;
    border: none;
    font-size: 48px;
    color: #B1AEF8;
    font-weight: 700;
    max-width: 5em;
    -moz-appearance:textfield;
    &::-webkit-outer-spin-button,
    &::-webkit-inner-spin-button {
      -webkit-appearance: none;
      margin: 0;
    }
    @media screen and (max-width: 999px) {
      font-size: 24px;
    }
  }

  &__output {
    min-width: 3em;
    display: inline-block;
  }

  &__input,
  &__output {
    border-bottom: 4px solid #B1AEF8;
  }

}

@media screen and (min-width: 1000px) {
  h1 {
    font-size: 54px;
    color: #FFFFFF;
  }

  h2.title {
    font-size: 24px;
  }
  h2.title_center {
    text-align: center;
    max-width: 660px;
    margin: 0 auto;
  }

  h2 {
    font-size: 48px;
    padding-bottom: 36px;
  }
  nav a:hover {
    color: #32305D;
  }
}

@media screen and (max-width: 999px) {
  h1 {
    font-size: 26px;
    color: #FFFFFF;
  }

  h2.title {
    font-size: 18px;
  }
  h2.title_center {
    text-align: center;
    max-width: 660px;
    margin: 0 auto;
    padding-bottom: 24px;
  }

  h2 {
    font-size: 24px;
  }
  h3 {
    font-size: 20px;
  }
  p {
    font-size: 16px;
  }
}

// Buttons //
.button {
  border-radius: 3.61742px;
  font-size: 1.33em;
  color: #FFFFFF;
  background: linear-gradient(132.11deg, rgba(44, 77, 255, 0.5) 19.23%, rgba(196, 124, 217, 0.5) 94.63%);
  padding: .77em 2.2em;
  box-shadow: 0px 14.4697px 43.4091px rgba(138, 130, 219, 0.2);

  &:hover {
    background-color: rebeccapurple;
  }
}

// Header //

header {
  background: linear-gradient(132.11deg, rgba(44, 77, 255, 0.5) 19.23%, rgba(196, 124, 217, 0.5) 94.63%);
  background-image: url("../images/bgnd_header.png");
  background-size: cover;
  color: #FFFFFF;

  @media screen and (min-width: 1020px) {
    h1 {
      margin: 2.5em 0 4em;
      line-height: 1.4;
    }
  }
}

// Menu //

nav {
  ul {
    display: flex;
    justify-content: space-around;
  }

  .menu_list {
    padding-left: 0;
    li {
      display: flex;
      align-items: center;
      font-size: 18px;
      font-weight: 700;
      list-style: none;
    }
  }
}

a {
  text-decoration: none;
}

// Section - Create & scale your digital economy //

.digital {
  p {
    color: #B4B4B4;
  }

  @media screen and (min-width: 1030px) {
    &__section {
      margin-top: 5em;
      min-height: 9em;
    }

    h3 {
      font-size: 30px;
    }

    p {
      font-size: 18px;
    }
  }
}

// Section - Get started for free, Wallet calculator //

.wallet {
  h2.title_center {
    padding-bottom: 36px;
  }

  @media screen and (min-width: 1030px) {
    img.iphone-phone {
      display: none;
    }
  }
  @media (max-width: 1019px) {
    img.iphone-desktop {
      display: none;
    }
  }
}

// Section - How your business benefits //

.benefits {
  h2 {
    padding-bottom: 0;
  }

  .box {
    box-shadow: 0px 20px 60px rgba(138, 130, 219, 0.2);
    text-align: center;
    height: 430px;
    background-color: #ffffff;

    h3 {
      font-size: 26px;
      line-height: 20px;
      padding: 8px 24px;
    }

    p {
      font-size: 16px;
      color: #B4B4B4;
      margin: 0 auto;
      padding: 0 24px 4px;
    }

    @media (max-width: 320px) {
      height: 410px;
    }
  }
  @media screen and (min-width: 1030px) {
    .box_margin {
      margin-top: 14px;
    }
  }
}

// Section - Get started Today //

.closure {
  text-align: center;
}

// Footer //
footer {
  .menu_list {
    @media screen and (max-width: 870px){
      display: block;
      text-align: center;
      li {
        display: block;
        margin-bottom: 0.5em;
      }
    }
    max-width: 620px;
    margin-left: auto;
    margin-right: auto;
    a {

      color: #000000;

      &:hover {
        color: #C36DE6;
      }
    }
  }
}

